Refactoring and further album service tests